# U64-Compute

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  build.sh
demo/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  u64_compute.h
src/hw/: CMakeLists.txt  detect.cpp  detect.h  gpu_detect.cpp  gpu_detect.h  micro.h  simd_detect.cpp  simd_detect.h  types.h
src/np/: CMakeLists.txt  array.cpp  array.h  array_utils.cpp  array_utils.h
src/op/: CMakeLists.txt  ops.cpp  ops.h  ops_base.h  ops_cpu.cpp  ops_cpu.h  ops_gpu_cuda.h  ops_simd_arm.cpp  ops_simd_arm.h  ops_simd_x64.h
